examples/pos/namer/multiple.effekt
namespace outer {
  def one() = 1
}
namespace outer {
  def two() = one() + one()
}

def main() = {
  println(outer::two())
}